# FlaskTest

./: .env.example  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  init_db.sh  pyproject.toml
alembic/: env.py
alembic/versions/: fd1381b873e3_initial_migration.py
src/: utils.py
src/admin/: __init__.py  admin.py  generate_superuser.py  view.py
src/auth/: decorators.py  test_jwt.py  tokens.py
src/db/: db.py  enums.py  models.py
src/handlers/: auth.py  dadata.py  mail.py  user.py
src/schemas/: user_schemas.py
src/services/captcha/: yandex.py
src/services/dadata/: dadata.py
src/services/mail/: conts.py  extentions.py  mail.py
src/swagger_schemas/: swagger_models.py
