[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["Skelesheit <Skelesheit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = {extras = ["async"], version = "^3.1.1"}
flask-login = "^0.6.3"
flask-mail = "^0.10.0"
flask-migrate = "^4.1.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
alembic = "^1.16.2"
jsonschema = "^4.24.0"
requests = "^2.32.4"
bcrypt = "^4.3.0"
gunicorn = "^23.0.0"
flask-restful = "^0.3.10"
flask-restx = "^1.3.0"
marshmallow = "^4.0.0"
marshmallow-sqlalchemy = "^1.4.2"
flask-jwt-extended = "^4.7.1"
python-dotenv = "^1.1.1"
psycopg2 = "^2.9.10"
pydantic = {extras = ["dotenv"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
itsdangerous = "^2.2.0"
flask-admin = "^1.6.1"
pyjwt = "^2.10.1"
flask-cors = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
